Component Design Methodology

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,1 +1,7 @@
-<p>search-bar works!</p>
+<!-- 1. using a method to update -->
+<!-- <input (input) = "onInput($event.target.value)" /> -->
+
+
+<!-- Direct term property update- this updates the term property directly in the class -->
+<input (input)="term = $event.target.value" />
+
