Handling Form Submission

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -3,5 +3,8 @@
 
 
 <!-- Direct term property update- this updates the term property directly in the class -->
-<input (input)="term = $event.target.value" />
+<form (submit)="onFormSubmit($event)">
+  <input (input)="term = $event.target.value" />
+</form>
+
 
